Changed logo names

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Dylan RAKOTONARIVO - Developer, Designer, Public Speaker</title>
 
     <!-- Site Icon -->
-    <link rel="icon" type="image/png" href="img/logo/Logo-dark.png">
+    <link rel="icon" type="image/png" href="img/logo/logo-dark.png">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
