Hero image justification

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container">
-                            <img data-aos="fade-right" class="hero__image" src="img/hero.png" alt="">
+                            <img data-aos="fade-right" class="hero__image" src="img/hero/hero.png" alt="">
                         </div>
                     </div>
                 </div>
