Mail send implementation

--- a/index.html
+++ b/index.html
@@ -630,11 +630,11 @@
                     <div class="row mt-4">
                         <div class="col-lg-12 col-md-12">
                             <div class="contact__form">
-                                <form action="#">
-                                    <input type="text" placeholder="Name">
-                                    <input type="text" placeholder="Email">
-                                    <input type="text" placeholder="Phone Number">
-                                    <textarea placeholder="Message"></textarea>
+                                <form id="contact-form">
+                                    <input id="name" type="text" placeholder="Name">
+                                    <input id="email" type="text" placeholder="Email">
+                                    <input id="phone" type="text" placeholder="Phone Number">
+                                    <textarea id="message" placeholder="Message"></textarea>
                                     <div class="w-100 d-flex justify-content-end px-2 my-2">
                                         <button type="submit" class="btn primary-btn">Send Message</button>
                                     </div>
@@ -681,6 +681,7 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/email.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
