Menu scroll implementation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-12">
                     <div class="header__nav__option">
                         <nav class="header__nav__menu mobile-menu">
-                            <ul>
+                            <ul id="navigation">
                                 <li class="active"><a href="#hero">Home</a></li>
                                 <li><a href="#resume">Resume</a></li>
                                 <li><a href="#services">services</a></li>
@@ -89,7 +89,7 @@
                                     <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker" class="mb-5">Web developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
-                                <a href="#" class="primary-btn">Get contact now</a>
+                                <a href="#contact" class="primary-btn">Get contact now</a>
                             </div>
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container">
@@ -309,7 +309,7 @@
                         </div>
                         <p>I provide services for those who are looking to build a new website, create engaging visuals, 
                             or improve your public speaking skills.</p>
-                        <a href="#" class="primary-btn">Get in Touch</a>
+                        <a href="#contact" class="primary-btn">Get in Touch</a>
                     </div>
                 </div>
                 <div class="col-lg-8">
