--- a/index.html
+++ b/index.html
@@ -631,10 +631,10 @@
                         <div class="col-lg-12 col-md-12">
                             <div class="contact__form">
                                 <form id="contact-form">
-                                    <input id="name" type="text" placeholder="Name">
-                                    <input id="email" type="text" placeholder="Email">
-                                    <input id="phone" type="text" placeholder="Phone Number">
-                                    <textarea id="message" placeholder="Message"></textarea>
+                                    <input id="name" type="text" placeholder="Name" required>
+                                    <input id="email" type="email" placeholder="Email" required>
+                                    <input id="phone" type="text" placeholder="Phone Number" required>
+                                    <textarea id="message" placeholder="Message" required></textarea>
                                     <div class="w-100 d-flex justify-content-end px-2 my-2">
                                         <button type="submit" class="btn primary-btn">Send Message</button>
                                     </div>
