--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 </div>
                 <div class="col-lg-12 p-0">
                     <div class="team__btn">
-                        <a href="#" class="primary-btn">Download Resume</a>
+                        <a id="btn-download-cv" href="#" class="primary-btn">Download Resume</a>
                     </div>
                 </div>
             </div>
