--- a/index.html
+++ b/index.html
@@ -84,28 +84,29 @@
                         <div class="col-lg-6 hero__text__container">
                             <div class="hero__text">
                                 <h2 class="mb-3">Hello !</h2>
-                                <h2>I'm Dylan</h2>
+                                <h2 class="rellax" data-rellax-speed="1.2">I'm Dylan</h2>
                                 <div class="d-flex typed__container">
-                                    <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker" class="mb-5">Web developer</span>
+                                    <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker" 
+                                    class="mb-5">Web developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
-                                <a href="#contact" class="primary-btn">Get contact now</a>
+                                <a href="#contact" class="primary-btn rellax"  data-rellax-speed="3">Get contact now</a>
                             </div>
                         </div>
-                        <div data-aos="fade-in" class="col-lg-6 hero__image__container">
+                        <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax"  data-rellax-speed="3">
                             <img data-aos="fade-right" class="hero__image" src="img/hero/hero.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="ball" data-aos="fade-in" data-aos-delay="800"></div>
-        <div class="ball" data-aos="fade-in" data-aos-delay="800"></div>
+        <div class="ball rellax" data-rellax-speed="-1" data-aos="fade-in" data-aos-delay="400"></div>
+        <div class="ball rellax" data-rellax-speed="-1" data-aos="fade-in" data-aos-delay="400"></div>
     </section>
     <!-- Hero Section End -->
 
     <!-- News Section Begin -->
-    <section id="news" data-aos="fade-in" class="about">
+    <section id="news" data-aos="zoom-out-up" class="about">
         <div class="container">
             <div class="section-title news-title">
                 <span>News</span>
@@ -158,7 +159,7 @@
             <h2>So, Who am I?</h2>
         </div>
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="150">
             <h3 class="resume-title">Resume</h3>
             <div class="resume-item pb-0">
               <h4>Brandon Johnson</h4>
@@ -187,7 +188,7 @@
 
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="400">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Senior graphic design specialist</h4>
@@ -231,7 +232,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="600">
                     <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -245,7 +246,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="450">
                     <div class="team__item team__item--second set-bg" data-setbg="img/team/team-2.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -259,7 +260,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="300">
                     <div class="team__item team__item--third set-bg" data-setbg="img/team/team-3.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -273,7 +274,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="150">
                     <div class="team__item team__item--four set-bg" data-setbg="img/team/team-4.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -682,6 +683,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/email.min.js"></script>
+    <script src="js/rellax.js"></script>
     <script src="js/main.js"></script>
 </body>
 
