--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="600">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="400">
                     <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="450">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="300">
                     <div class="team__item team__item--second set-bg" data-setbg="img/team/team-2.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="200">
                     <div class="team__item team__item--third set-bg" data-setbg="img/team/team-3.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -274,7 +274,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="150">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="100">
                     <div class="team__item team__item--four set-bg" data-setbg="img/team/team-4.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -299,7 +299,7 @@
     <!-- Resume Section End -->
 
     <!-- Services Section Begin -->
-    <section id="services" data-aos="fade-in" class="services">
+    <section id="services" data-aos="zoom-in" class="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -366,7 +366,7 @@
                 <h2>What I use</h2>
             </div>
             <div class="row gy-4">
-                <div class="col-lg-6 col-md-6 skills-item-container">
+                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="100">
                     <div class="skills-item item-cyan position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -382,7 +382,7 @@
                         <p></p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 skills-item-container">
+                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="200">
                     <div class="skills-item item-pink position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -399,7 +399,7 @@
                         <a href="#" class="stretched-link"></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 skills-item-container">
+                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="300">
                     <div class="skills-item item-indigo position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -416,7 +416,7 @@
                         <a href="#" class="stretched-link"></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 skills-item-container">
+                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="400">
                     <div class="skills-item item-red position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
