--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 </div>
             </div>
         </div>
-        <div class="ball rellax" data-rellax-speed="-1" data-aos="fade-in" data-aos-delay="400"></div>
-        <div class="ball rellax" data-rellax-speed="-1" data-aos="fade-in" data-aos-delay="400"></div>
+        <div class="ball" data-aos="fade-in" data-aos-delay="400"></div>
+        <div class="ball" data-aos="fade-in" data-aos-delay="400"></div>
     </section>
     <!-- Hero Section End -->
 
@@ -113,7 +113,7 @@
                 <h2>What's up about me?</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6" data-aos="fade-in">
                     <div class="about__pic">
                         <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6" data-aos="fade-in">
                     <div class="about__text">
                         <div class="row">
                             <div class="col-lg-12">
@@ -152,14 +152,14 @@
     <!-- News Section End -->
 
     <!-- Resume Section Begin -->
-    <section id="resume" data-aos="fade-in" class="resume">
+    <section id="resume" data-aos="zoom-out" class="resume">
       <div class="container">
         <div class="section-title">
             <span>Resume</span>
             <h2>So, Who am I?</h2>
         </div>
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="150">
+          <div class="col-lg-6" data-aos="fade-in">
             <h3 class="resume-title">Resume</h3>
             <div class="resume-item pb-0">
               <h4>Brandon Johnson</h4>
@@ -188,7 +188,7 @@
 
           </div>
 
-          <div class="col-lg-6" data-aos="fade-in" data-aos-delay="400">
+          <div class="col-lg-6" data-aos="fade-in">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Senior graphic design specialist</h4>
