--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <h2>So, Who am I?</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6" data-aos="fade-in-up">
+                <div class="col-lg-6" data-aos="zoom-out-up" data-aos-delay="100">
                     <h3 class="resume-title">Resume</h3>
                     <div class="resume-item pb-0">
                     <h4>Brandon Johnson</h4>
@@ -189,7 +189,7 @@
 
                 </div>
 
-                <div class="col-lg-6" data-aos="fade-in-up">
+                <div class="col-lg-6" data-aos="zoom-out-up" data-aos-delay="100">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
                     <h4>Senior graphic design specialist</h4>
@@ -440,7 +440,7 @@
 
     
     <!-- Projects Section Begin -->
-    <section id="projects" data-aos="fade-in" class="portfolio">
+    <section id="projects" data-aos="zoom-in" class="portfolio" data-aos-delay="100">
         <div class="container">
             <div class="section-title">
                 <span>Projects</span>
@@ -584,7 +584,7 @@
     <!-- Projects Section End -->
 
     <!-- Contact Section Begin -->
-    <section id="contact" data-aos="fade-in" class="contact-widget">
+    <section id="contact" data-aos="fade-out" class="contact-widget" data-aos-delay="200">
         <div class="container">
             <div class="section-title">
                 <span>Contact</span>
