--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Header Begin -->
-    <header data-aos="fade-in" class="header">
+    <header class="header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -84,16 +84,16 @@
                         <div class="col-lg-6 hero__text__container">
                             <div class="hero__text">
                                 <h2 class="mb-3">Hello !</h2>
-                                <h2 class="rellax" data-rellax-speed="1.2">I'm Dylan</h2>
+                                <h2 class="rellax" data-rellax-speed="1.1">I'm Dylan</h2>
                                 <div class="d-flex typed__container">
                                     <span class="typed mb-5" data-typed-items="Web developer,Designer,Public speaker" 
                                     class="mb-5">Web developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
-                                <a href="#contact" class="primary-btn rellax"  data-rellax-speed="3">Get contact now</a>
+                                <a href="#contact" class="primary-btn rellax"  data-rellax-speed="2">Get contact now</a>
                             </div>
                         </div>
-                        <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax"  data-rellax-speed="3">
+                        <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax"  data-rellax-speed="2">
                             <img data-aos="fade-right" class="hero__image" src="img/hero/hero.png" alt="">
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                 <h2>What's up about me?</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6" data-aos="fade-in">
+                <div class="col-lg-6">
                     <div class="about__pic">
                         <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6" data-aos="fade-in">
+                <div class="col-lg-6">
                     <div class="about__text">
                         <div class="row">
                             <div class="col-lg-12">
@@ -148,7 +148,6 @@
                 </div>
             </div>
         </div>
-        <div class="ball" data-aos="fade-in"></div>
     </section>
     <!-- News Section End -->
 
@@ -160,7 +159,7 @@
                 <h2>So, Who am I?</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6" data-aos="zoom-out-up" data-aos-delay="100">
+                <div class="col-lg-6">
                     <h3 class="resume-title">Resume</h3>
                     <div class="resume-item pb-0">
                     <h4>Brandon Johnson</h4>
@@ -189,7 +188,7 @@
 
                 </div>
 
-                <div class="col-lg-6" data-aos="zoom-out-up" data-aos-delay="100">
+                <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
                     <h4>Senior graphic design specialist</h4>
@@ -294,6 +293,7 @@
                 </div>
             </div>
         </div>
+        <div class="ball" data-aos="fade-in"></div>
     </section>
     <!-- Resume Section End -->
 
@@ -399,7 +399,7 @@
                         <a href="#" class="stretched-link"></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="300">
+                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="150">
                     <div class="skills-item item-indigo position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -416,7 +416,7 @@
                         <a href="#" class="stretched-link"></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="400">
+                <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="250">
                     <div class="skills-item item-red position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
