--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- News Section End -->
 
     <!-- Resume Section Begin -->
-    <section id="resume" data-aos="zoom-out" class="resume">
+    <section id="resume" data-aos="zoom-out-up" class="resume">
         <div class="container">
             <div class="section-title">
                 <span>Resume</span>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="400">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="250">
                     <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="100">
                     <div class="team__item team__item--second set-bg" data-setbg="img/team/team-2.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="50">
                     <div class="team__item team__item--third set-bg" data-setbg="img/team/team-3.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
@@ -272,7 +272,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up">
                     <div class="team__item team__item--four set-bg" data-setbg="img/team/team-4.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
