Scroll animation mod

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
     
     <!-- Projects Section Begin -->
-    <section id="projects" data-aos="zoom-in" class="portfolio" data-aos-delay="100">
+    <section id="projects" data-aos="fade-up" class="portfolio" data-aos-delay="150">
         <div class="container">
             <div class="section-title">
                 <span>Projects</span>
@@ -580,6 +580,7 @@
             </div>
         </div>
         <div class="ball"></div>
+        <div class="ball"></div>
     </section>
     <!-- Projects Section End -->
 
@@ -647,7 +648,6 @@
                 </div>
             </div>
         </div>
-        <div class="ball"></div>
     </section>
     <!-- Contact Section End -->
 
