Added card to form

--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
     <!-- News Section End -->
 
     <!-- Resume Section Begin -->
-    <section id="resume" data-aos="zoom-out-up" class="resume">
+    <section id="resume" data-aos="fade-up" class="resume">
         <div class="container">
             <div class="section-title">
                 <span>Resume</span>
                 <h2>So, Who am I?</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="50">
                     <h3 class="resume-title">Resume</h3>
                     <div class="resume-item pb-0">
                     <h4>Brandon Johnson</h4>
@@ -188,7 +188,7 @@
 
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
                     <h4>Senior graphic design specialist</h4>
@@ -632,16 +632,18 @@
                 <div class="col-lg-6">
                     <div class="row mt-4">
                         <div class="col-lg-12 col-md-12">
-                            <div class="contact__form">
-                                <form id="contact-form">
-                                    <input id="name" type="text" placeholder="Name" required>
-                                    <input id="email" type="email" placeholder="Email" required>
-                                    <input id="phone" type="text" placeholder="Phone Number" required>
-                                    <textarea id="message" placeholder="Message" required></textarea>
-                                    <div class="w-100 d-flex justify-content-end px-2 my-2">
-                                        <button type="submit" class="btn primary-btn">Send Message</button>
-                                    </div>
-                                </form>
+                            <div class="card">
+                                <div class="contact__form">
+                                    <form id="contact-form">
+                                        <input id="name" type="text" placeholder="Name" required>
+                                        <input id="email" type="email" placeholder="Email" required>
+                                        <input id="phone" type="text" placeholder="Phone Number" required>
+                                        <textarea id="message" placeholder="Message" required></textarea>
+                                        <div class="w-100 d-flex justify-content-end px-2 my-2">
+                                            <button type="submit" class="btn primary-btn">Send Message</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
