--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
                 </div>
             </div>
         </div>
+        <div class="ball"></div>
     </section>
     <!-- /Services Section -->
 
@@ -580,7 +581,6 @@
             </div>
         </div>
         <div class="ball"></div>
-        <div class="ball"></div>
     </section>
     <!-- Projects Section End -->
 
@@ -591,7 +591,7 @@
                 <span>Contact</span>
                 <h2>How to join me?</h2>
             </div>
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-lg-12">
@@ -650,6 +650,7 @@
                 </div>
             </div>
         </div>
+        <div class="ball"></div>
     </section>
     <!-- Contact Section End -->
 
@@ -688,6 +689,7 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/email.min.js"></script>
     <script src="js/rellax.js"></script>
+    <script src="js/theatre.js"></script>
     <script src="js/main.js"></script>
 </body>
 
