Contact Form Animation by theatre

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                     class="mb-5">Web developer</span>
                                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
                                 </div>
-                                <a href="#contact" class="primary-btn rellax"  data-rellax-speed="2">Get contact now</a>
+                                <a href="#contact" class="primary-btn rellax contact-button" data-rellax-speed="2">Get contact now</a>
                             </div>
                         </div>
                         <div data-aos="fade-in" class="col-lg-6 hero__image__container rellax"  data-rellax-speed="2">
@@ -309,7 +309,7 @@
                         </div>
                         <p>I provide services for those who are looking to build a new website, create engaging visuals, 
                             or improve your public speaking skills.</p>
-                        <a href="#contact" class="primary-btn">Get in Touch</a>
+                        <a href="#contact" class="primary-btn contact-button">Get in Touch</a>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -673,6 +673,9 @@
     </footer>
     <!-- Footer End -->
 
+    <!-- Theatre states -->
+    <script src="states/state.js"></script>
+
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="vendors/aos/aos.js"></script>
@@ -691,6 +694,7 @@
     <script src="js/rellax.js"></script>
     <script src="js/theatre.js"></script>
     <script src="js/main.js"></script>
+    
 </body>
 
 </html>
