Added custom cursor

--- a/index.html
+++ b/index.html
@@ -376,10 +376,14 @@
                             </svg>
                             <i class="fa fa-database skills-icon"></i>
                         </div>
-                        <a href="#" class="stretched-link">
+                        <div class="stretched-link">
                             <h3>Databases</h3>
-                        </a>
-                        <p></p>
+                        </div>
+                        <div class="toolbox">
+                            <div class="tool blue">Mysql</div>
+                            <div class="tool blue">PostgreSQL</div>
+                            <div class="tool blue">H2 Database</div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="200">
@@ -392,15 +396,18 @@
                             </svg>
                             <i class="fa fa-gears skills-icon"></i>
                         </div>
-                        <a href="#" class="stretched-link">
-                            <h3>Frameworks</h3>
-                        </a>
-                        <p></p>
-                        <a href="#" class="stretched-link"></a>
+                        <div class="stretched-link">
+                            <h3>Frameworks &amp; Libraries</h3>
+                        </div>
+                        <div class="toolbox">
+                            <div class="tool pink">Mysql</div>
+                            <div class="tool pink">PostgreSQL</div>
+                            <div class="tool pink">H2</div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="150">
-                    <div class="skills-item item-indigo position-relative">
+                    <div class="skills-item item-red position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                                 <path class="svg-path" stroke="none" stroke-width="0" fill="#f5f5f5"
@@ -409,15 +416,18 @@
                             </svg>
                             <i class="fa fa-gears skills-icon"></i>
                         </div>
-                        <a href="#" class="stretched-link">
+                        <div class="stretched-link">
                             <h3>Development tools</h3>
-                        </a>
-                        <p></p>
-                        <a href="#" class="stretched-link"></a>
+                        </div>
+                        <div class="toolbox">
+                            <div class="tool purple">Mysql</div>
+                            <div class="tool purple">PostgreSQL</div>
+                            <div class="tool purple">H2</div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 skills-item-container" data-aos="flip-right" data-aos-delay="250">
-                    <div class="skills-item item-red position-relative">
+                    <div class="skills-item item-indigo position-relative">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                                 <path class="svg-path" stroke="none" stroke-width="0" fill="#f5f5f5"
@@ -426,11 +436,14 @@
                             </svg>
                             <i class="fa fa-brush skills-icon"></i>
                         </div>
-                        <a href="#" class="stretched-link">
+                        <div class="stretched-link">
                             <h3>Design &amp; CMS</h3>
-                        </a>
-                        <p></p>
-                        <a href="#" class="stretched-link"></a>
+                        </div>
+                        <div class="toolbox">
+                            <div class="tool red">Mysql</div>
+                            <div class="tool red">PostgreSQL</div>
+                            <div class="tool red">H2</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -693,7 +706,7 @@
         VANTA.GLOBE({
             el: "#hero",
             backgroundColor: "#000116",
-            color: "#020828",
+            color: "#020830",
             color2: "#000116",
             mouseControls: true,
             touchControls: true,
