--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__copyright">
-                <div class="row">
+                <div class="row gy-5">
                     <div class="col-lg-12 text-center">
                         <p class="footer__copyright__text">Copyright &copy;
                             <script>
@@ -672,6 +672,19 @@
                             </script>
                             All rights reserved
                         </p>
+                    </div>
+                    <div class="col-lg-12 text-center">
+                        <div id="footer__nav__social" class="footer__nav__social d-none py-4">
+                            <a href="https://web.facebook.com/dylan.mickael.58">
+                                <i class="fa-brands fa-square-facebook"></i>
+                            </a>
+                            <a href="https://github.com/DylanMickael">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="https://mg.linkedin.com/in/dylan-micka%C3%ABl-rakotonarivo-914222282">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -700,7 +713,7 @@
     <script src="js/rellax.js"></script>
     <script src="js/theatre.js"></script>
     <script src="js/main.js"></script>
-    <script src="vendors/vanta/three.min.js"></script>
+    <script src="vendors/threejs/three.min.js"></script>
     <script src="vendors/vanta/vanta.globe.min.js"></script>
     <script>
         VANTA.GLOBE({
