--- a/bigbang.html
+++ b/bigbang.html
@@ -2,19 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Videograph Template">
+    <meta name="keywords" content="Videograph, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        canvas {
-            display: block;
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Site Tite -->
+    <title>Dylan RAKOTONARIVO - Developer, Designer, Public Speaker</title>
+
+    <!-- Site Icon -->
+    <link rel="icon" type="image/png" href="img/logo/logo-dark.png">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
+    <!-- Css Styles -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bigbang.css" type="text/css">
 </head>
 <body>
+    <div id="singularity"></div>
+    <div id="main">
+        <button id="startButton" class="btn btn-primary">Start Animation</button>
+    </div>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="vendors/threejs/three.min.js"></script>
     <script src="vendors/threejs/CopyShader.js"></script>
     <script src="vendors/threejs/LuminosityHighPassShader.js"></script>
