--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css" type="text/css">
 </head>
 <body data-aos="fade-in">
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
     <div id="singularity"></div>
     <div class="text-container">
         <div id="typed-text"></div>
     </div>
-    <div id="final-text" class="text-center text-white d-none">
-        <p>Welcome to my universe</p>
-        <a href="/portfolio.html">
+    <div id="final-text-container" class="text-center text-white">
+        <p id="final-text">Welcome to my universe</p>
+        <a id="final-button" href="/portfolio.html">
             <button>
                 Start exploring
             </button>
