Big bang : welcome to my universe

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div id="typed-text"></div>
     </div>
     <div id="final-text-container" class="text-center text-white">
-        <p id="final-text">Welcome to my universe</p>
+        <p id="final-text"><i class="fa fa-star"></i> Welcome to my universe ! <i class="fa fa-star"></i></p>
         <a id="final-button" href="/portfolio.html">
-            <button id="skip-button">
+            <button id="cta-button">
                 <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path
@@ -48,12 +48,16 @@
     </div>
     <div id="button-container">
         <a href="/portfolio.html">
-            <button>
+            <button id="skip-button">
                 Skip
                 <i class="fa fa-step-forward"></i>
             </button>
         </a>
     </div>
+    <!-- From Uiverse.io by Praashoo7 -->
+    <img class="astronaut" src="img/astronaut.png" alt="" class="image" />
+    <div class="moon"></div>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="vendors/typed.js/typed.umd.js"></script>
     <script src="vendors/aos/aos.js"></script>
