--- a/portfolio.html
+++ b/portfolio.html
@@ -133,7 +133,7 @@
                                         <i class="fa fa-graduation-cap"></i>
                                     </div>
                                     <h4 class="news__subtitle">
-                                        <i class="fa fa-star"></i> Always going higher and further <i class="fa fa-star"></i>
+                                        <i class="fa fa-chart-line"></i> Always going higher and further
                                     </h4>
                                     <p>January 17, 2025</p>
                                 </div>
