Used shooting star css

--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
     </div>
     <img class="astronaut" src="img/astronaut.png" alt="" class="image" />
     <div class="moon"></div>
+    <section>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </section>
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="vendors/typed.js/typed.umd.js"></script>
