Replaced shooting star animation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="typed-text"></div>
     </div>
     <div id="final-text-container" class="text-center text-white">
-        <p id="final-text"><i class="fa fa-star"></i> Welcome to my universe! <i class="fa fa-star"></i></p>
+        <p id="final-text">Welcome to my universe!</p>
         <a id="final-button" href="/portfolio.html">
             <button id="cta-button">
                 <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -54,8 +54,7 @@
             </button>
         </a>
     </div>
-    <img class="astronaut" src="img/astronaut.png" alt="" class="image" />
-    <div class="moon"></div>
+    <div id="planet"></div>
     <section>
         <span></span>
         <span></span>
