--- a/index.html
+++ b/index.html
@@ -55,19 +55,7 @@
         </a>
     </div>
     <div id="planet"></div>
-    <section>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </section>
+    <section id="shooting-star"></section>
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="vendors/typed.js/typed.umd.js"></script>
