--- a/portfolio.html
+++ b/portfolio.html
@@ -230,65 +230,30 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="250">
-                    <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
+                <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up" data-aos-delay="250">
+                    <div class="team__item set-bg" data-setbg="img/team/team1.jpg">
                         <div class="team__item__text">
-                            <h4>AMANDA STONE</h4>
-                            <p>Videographer</p>
-                            <div class="team__item__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
+                            <p>Fianarant'Slam Event Responsible</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="100">
-                    <div class="team__item team__item--second set-bg" data-setbg="img/team/team-2.jpg">
+                <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up" data-aos-delay="50">
+                    <div class="team__item team__item--third set-bg" data-setbg="img/team/team.jpg">
                         <div class="team__item__text">
-                            <h4>AMANDA STONE</h4>
-                            <p>Videographer</p>
-                            <div class="team__item__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
+                            <p>ENI Oratory Art Club President</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up" data-aos-delay="50">
-                    <div class="team__item team__item--third set-bg" data-setbg="img/team/team-3.jpg">
+                <div class="col-lg-4 col-md-6 col-sm-6 px-3" data-aos="fade-up">
+                    <div class="team__item team__item--four set-bg" data-setbg="img/team/team3.jpg">
                         <div class="team__item__text">
-                            <h4>AMANDA STONE</h4>
-                            <p>Videographer</p>
-                            <div class="team__item__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0" data-aos="fade-up">
-                    <div class="team__item team__item--four set-bg" data-setbg="img/team/team-4.jpg">
-                        <div class="team__item__text">
-                            <h4>AMANDA STONE</h4>
-                            <p>Videographer</p>
-                            <div class="team__item__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
+                            <p>JCI Ivonea Observer</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-12 p-0">
                     <div class="team__btn">
-                        <a id="btn-download-cv" href="#" class="primary-btn">Download Resume</a>
+                        <a id="btn-download-cv" href="#" class="primary-btn">Download My Resume</a>
                     </div>
                 </div>
             </div>
@@ -309,7 +274,7 @@
                         </div>
                         <p>I provide services for those who are looking to build a new website, create engaging visuals, 
                             or improve your public speaking skills.</p>
-                        <a href="#contact" class="primary-btn contact-button">Get in Touch</a>
+                        <a href="#contact" class="primary-btn contact-button">Get Contact Now</a>
                     </div>
                 </div>
                 <div class="col-lg-8">
