Services text correction

--- a/portfolio.html
+++ b/portfolio.html
@@ -285,7 +285,7 @@
                                     <i class="fa fa-code"></i>
                                 </div>
                                 <h4>Web Development</h4>
-                                <p>I create custom web applications and websites that are secure and user-friendly. From simple websites to complex e-commerce solutions, I work closely with clients to bring their vision to life.</p>
+                                <p>I specialize in creating custom web applications and websites that are secure and user-friendly. From simple websites to complex e-commerce, I can bring your vision to life.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -294,7 +294,7 @@
                                     <i class="fa fa-object-ungroup"></i>
                                 </div>
                                 <h4>Web Design</h4>
-                                <p>I specialize in creating intuitive interfaces that enhance user experience. I work with clients to create a design that reflects their brand and resonates with their target audience.</p>
+                                <p>I also create intuitive interfaces that enhance user experience. Whether working independently or in collaboration, I design solutions that reflect companies brand and business processes.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -312,7 +312,7 @@
                                     <i class="fa-solid fa-person-chalkboard"></i>
                                 </div>
                                 <h4>Public Speaking Formation</h4>
-                                <p>I help individuals become confident and effective communicators. I work with clients to develop their presentation skills, body language, and tone to inspire their audience.</p>
+                                <p>I help individuals to become effective communicators. Equipping them with the tools necessary to deliver engaging presentations that inspire their audience.</p>
                             </div>
                         </div>
                     </div>
